# 6502_computer

./: .gitignore  README.md  pyproject.toml
6502_harness/: 6502_harness.ino
rom/blink/: blink.s
rom/hello/: hello.s
rom/hello_world_no_stack/: hello_world_no_stack.s
rom/memdump/: memdump.s
